--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "flexboxgrid": "^6.3.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
+    "ng2-destroy-subscribers": "^1.0.0",
     "ngx-cookie-service": "^2.4.0",
+    "ngx-destroy-subscribers": "^7.0.1",
     "ngx-infinite-scroll": "^8.0.1",
     "popper.js": "^1.16.1",
-    "rxjs": "~6.4.0",
+    "rxjs": "^6.4.0",
     "tslib": "^1.11.1",
     "zone.js": "~0.9.1"
   },
