--- a/package.json
+++ b/package.json
@@ -11,48 +11,48 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.1.7",
-    "@angular/cdk": "^9.2.3",
-    "@angular/common": "~9.1.7",
-    "@angular/compiler": "~9.1.7",
-    "@angular/core": "~9.1.7",
-    "@angular/forms": "~9.1.7",
-    "@angular/material": "^9.2.3",
-    "@angular/platform-browser": "~9.1.7",
-    "@angular/platform-browser-dynamic": "~9.1.7",
-    "@angular/router": "~9.1.7",
-    "@ng-bootstrap/ng-bootstrap": "^5.3.1",
+    "@angular/animations": "^9.1.11",
+    "@angular/cdk": "^9.2.4",
+    "@angular/common": "^9.1.11",
+    "@angular/compiler": "^9.1.11",
+    "@angular/core": "^9.1.11",
+    "@angular/forms": "^9.1.11",
+    "@angular/material": "^9.2.4",
+    "@angular/platform-browser": "^9.1.11",
+    "@angular/platform-browser-dynamic": "^9.1.11",
+    "@angular/router": "^9.1.11",
+    "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "bootstrap": "^4.5.0",
     "flexboxgrid": "^6.3.1",
     "jquery": "^3.5.1",
     "ng2-destroy-subscribers": "^1.0.0",
-    "ngx-cookie-service": "^2.4.0",
+    "ngx-cookie-service": "^3.0.4",
     "ngx-destroy-subscribers": "^7.0.1",
-    "ngx-infinite-scroll": "^8.0.2",
+    "ngx-infinite-scroll": "^9.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "^6.5.5",
-    "tslib": "^1.13.0",
-    "zone.js": "~0.10.2"
+    "tslib": "^2.0.0",
+    "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.6",
-    "@angular/cli": "^9.1.6",
-    "@angular/compiler-cli": "~9.1.7",
-    "@angular/language-service": "~9.1.7",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^5.1.2",
+    "@angular-devkit/build-angular": "^0.901.9",
+    "@angular/cli": "^9.1.9",
+    "@angular/compiler-cli": "^9.1.11",
+    "@angular/language-service": "^9.1.11",
+    "@types/jasmine": "^3.5.11",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/node": "^14.0.14",
+    "codelyzer": "^5.2.2",
     "jasmine-core": "^3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
+    "jasmine-spec-reporter": "^5.0.2",
+    "karma": "^5.1.0",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine": "^3.3.1",
     "karma-jasmine-html-reporter": "^1.5.4",
-    "protractor": "^5.4.4",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.8.3"
+    "protractor": "^7.0.0",
+    "ts-node": "^8.10.2",
+    "tslint": "^6.1.2",
+    "typescript": "^3.8.3"
   }
 }
