Implemented Upload mechanism, added new media list page, implemented delete option

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/compiler": "^10.1.5",
     "@angular/core": "^10.1.5",
     "@angular/forms": "^10.1.5",
+    "@angular/localize": "^10.1.6",
     "@angular/material": "^10.2.4",
     "@angular/platform-browser": "^10.1.5",
     "@angular/platform-browser-dynamic": "^10.1.5",
@@ -27,7 +28,11 @@
     "jquery": "^3.5.1",
     "ng2-destroy-subscribers": "^1.0.0",
     "ngx-cookie-service": "^3.0.4",
-    "ngx-infinite-scroll": "^9.0.0",
+    "ngx-infinite-scroll": "^9.1.0",
+    "ngx-scroll-event": "^2.0.0",
+    "ngx-scrollbar": "^7.3.0",
+    "ngx-ui-scroll": "^1.8.5",
+    "ngx-virtual-scroller": "^4.0.3",
     "popper.js": "^1.16.1",
     "rxjs": "^6.6.3",
     "tslib": "^2.0.0",
