--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^10.1.5",
     "@angular/router": "^10.1.5",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+    "@videogular/ngx-videogular": "^2.1.0",
     "bootstrap": "^4.5.0",
     "flexboxgrid": "^6.3.1",
     "jquery": "^3.5.1",
@@ -36,13 +37,15 @@
     "popper.js": "^1.16.1",
     "rxjs": "^6.6.3",
     "tslib": "^2.0.0",
+    "videogular2": "^7.0.2",
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1001.6",
+    "@angular-devkit/build-angular": "^0.1100.2",
     "@angular/cli": "^10.1.6",
     "@angular/compiler-cli": "^10.1.5",
     "@angular/language-service": "^10.1.5",
+    "@types/core-js": "^2.5.4",
     "@types/jasmine": "^3.5.11",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^14.0.14",
