--- a/package.json
+++ b/package.json
@@ -11,54 +11,35 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.1.5",
-    "@angular/cdk": "^10.2.4",
-    "@angular/common": "^10.1.5",
-    "@angular/compiler": "^10.1.5",
-    "@angular/core": "^10.1.5",
-    "@angular/forms": "^10.1.5",
-    "@angular/localize": "^10.1.6",
-    "@angular/material": "^10.2.4",
-    "@angular/platform-browser": "^10.1.5",
-    "@angular/platform-browser-dynamic": "^10.1.5",
-    "@angular/router": "^10.1.5",
-    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
-    "@videogular/ngx-videogular": "^2.1.0",
-    "bootstrap": "^4.5.0",
-    "flexboxgrid": "^6.3.1",
-    "jquery": "^3.5.1",
-    "keycloak-angular": "^8.0.1",
-    "ngx-cookie-service": "^3.0.4",
-    "ngx-infinite-scroll": "^9.1.0",
-    "ngx-scroll-event": "^2.0.0",
-    "ngx-scrollbar": "^7.3.0",
-    "ngx-ui-scroll": "^1.8.5",
-    "ngx-virtual-scroller": "^4.0.3",
-    "rxjs": "^6.6.3",
-    "tslib": "^2.0.0",
-    "videogular2": "^7.0.2",
-    "zone.js": "^0.10.3"
+    "@angular/animations": "~10.2.3",
+    "@angular/cdk": "~10.2.7",
+    "@angular/common": "~10.2.3",
+    "@angular/compiler": "~10.2.3",
+    "@angular/core": "~10.2.3",
+    "@angular/forms": "~10.2.3",
+    "@angular/localize": "~10.2.3",
+    "@angular/material": "~10.2.7",
+    "@angular/platform-browser": "~10.2.3",
+    "@angular/platform-browser-dynamic": "~10.2.3",
+    "@angular/router": "~10.2.3",
+    "@michaukrieg/ngx-virtual-scroller": "~5.0.0",
+    "@ng-bootstrap/ng-bootstrap": "~8.0.0",
+    "@videogular/ngx-videogular": "~2.1.0",
+    "bootstrap": "~4.5.3",
+    "jquery": "~3.5.1",
+    "keycloak-angular": "~8.0.1",
+    "ngx-cookie-service": "~10.1.1",
+    "rxjs": "~6.6.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1100.2",
-    "@angular/cli": "^10.2.0",
-    "@angular/compiler-cli": "^10.1.5",
-    "@angular/language-service": "^10.1.5",
-    "@types/core-js": "^2.5.4",
-    "@types/jasmine": "^3.5.11",
-    "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^14.0.14",
-    "codelyzer": "^5.2.2",
-    "jasmine-core": "^3.5.0",
-    "jasmine-spec-reporter": "^5.0.2",
-    "karma": "^5.1.0",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage-istanbul-reporter": "^3.0.3",
-    "karma-jasmine": "^3.3.1",
-    "karma-jasmine-html-reporter": "^1.5.4",
-    "protractor": "^7.0.0",
-    "ts-node": "^8.10.2",
-    "tslint": "^6.1.2",
-    "typescript": "^4.0.3"
+    "@angular-devkit/build-angular": "~0.1002.0",
+    "@angular/cli": "~10.2.0",
+    "@angular/compiler-cli": "~10.2.3",
+    "@angular/language-service": "~10.2.3",
+    "@types/node": "~14.14.13",
+    "protractor": "~7.0.0",
+    "ts-node": "~9.1.1",
+    "tslint": "~6.1.2",
+    "typescript": "~4.0.3"
   }
 }
