--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "pr-im-board-web",
-  "version": "0.0.0",
+  "name": "@mirisbowring/primboard-web",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -9,7 +9,6 @@
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
-  "private": true,
   "dependencies": {
     "@angular/animations": "~10.2.3",
     "@angular/cdk": "~10.2.7",
@@ -43,5 +42,20 @@
     "ts-node": "~9.1.1",
     "tslint": "~6.1.2",
     "typescript": "~4.0.3"
-  }
+  },
+  "description": "Default WebUI for the PrImBoard API",
+  "main": "karma.conf.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mirisbowring/PrImBoard-Web.git"
+  },
+  "keywords": [
+    "primboard"
+  ],
+  "author": "Arthur Ferdinand Lindner",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/mirisbowring/PrImBoard-Web/issues"
+  },
+  "homepage": "https://github.com/mirisbowring/PrImBoard-Web#readme"
 }
