using web location

--- a/nginx.conf
+++ b/nginx.conf
@@ -11,7 +11,7 @@ http {
         server_name localhost;
         root /usr/share/nginx/html;
         index index.html;
-        location / {
+        location /web {
             try_files $uri $uri/ /index.html;
         }
     }
