--- a/nginx.conf
+++ b/nginx.conf
@@ -5,6 +5,7 @@ events {
 http {
     error_log /etc/nginx/logs/error_log.log warn;
 
+    include /etc/nginx/mime.types;
     server {
         listen 80;
         server_name localhost;
