--- a/nginx.conf
+++ b/nginx.conf
@@ -12,7 +12,7 @@ http {
         root /usr/share/nginx/html;
         index index.html;
         location /web {
-            try_files $uri $uri/ /index.html;
+            try_files $uri $uri/ /web/index.html;
         }
     }
 }
